[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snekmer"
version = "2.0.0"
authors = [
    { name="christinehc", email="christine.chang@pnnl.gov" },
    { name="biodataganache", email="jason.mcdermott@pnnl.gov" }
]
description = "Snekmer: Reduced k-mer Encoding for Protein Sequences"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/PNNL-CompBio/Snekmer"
"Documentation" = "https://snekmer.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/PNNL-CompBio/Snekmer/issues"

[project.scripts]
snekmer = "snekmer.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-data]
"snekmer.scripts" = ["*.py"]
"snekmer.rules" = ["*.smk"]
"snekmer.templates" = ["*.html"]